--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.5",
+    "babel-loader": "^9.1.2",
+    "react-router-dom": "^6.8.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
